@@ -191,7 +191,7 @@ class TranslationMgr extends SGL_Manager
         SGL::logMessage(null, PEAR_LOG_DEBUG);
 
         //  get hash of all modules;
-        $output->aModules = $this->da->retrieveAllModules(SGL_RET_NAME_VALUE);
+        $output->aModules = $this->da->getModuleHash(SGL_RET_NAME_VALUE);
 
         //  load available languages
         $output->aLangs = ($this->conf['translation']['container'] == 'file')
@@ -327,7 +327,7 @@ class TranslationMgr extends SGL_Manager
         $output->template = 'langCheckAll.html';
 
         //  get hash of all modules
-        $modules = $this->da->retrieveAllModules(SGL_RET_NAME_VALUE);
+        $modules = $this->da->getModuleHash(SGL_RET_NAME_VALUE);
 
         //  ok, now check each module
         $status['1'] = 'ok';
